--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "gh-pages -d dist/todoApp"
+    "deploy": "gh-pages -d dist"
   },
   "private": true,
   "homepage": "https://aryan1403.github.io/AngularTodoApp",
