--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ chrome-profiler-events*.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
-package.lock.json
+package-lock.json
 
 # misc
 /.sass-cache
