--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "deploy": "gh-pages -d dist"
+    "test": "ng test"
   },
   "private": true,
-  "homepage": "https://github.com/aryan1403/AngularTodoApp/",
   "dependencies": {
     "@angular/animations": "~12.2.0",
     "@angular/common": "~12.2.0",
@@ -22,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "bootstrap": "^4.5.0",
     "gh-pages": "^3.2.3",
     "rxjs": "~6.6.0",
